# ep_spector

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY_FINAL.md  DISCLAIMER.md  DISCLAIMER_OSS.md  Dockerfile.django  Dockerfile.tornado  Dockerfile.worker  INSTALL.md  LICENSE  LICENSE-AGPL  LICENSE-MIT  OSS_FINAL_CHECKLIST.md  OSS_RELEASE_FINAL_STATUS.md  OSS_RELEASE_SUMMARY.md  PRE_COMMIT_INSTALL_INSTRUCTIONS.md  Project.toml  README.md  README_OSS.md  SECURITY.md  SECURITY_QUICK_REFERENCE.md  SPECTOR_OSS_RELEASE_SUMMARY.md  TODO.md  TOR_INTEGRATION_GUIDE.md  TOR_TORNADO_INTEGRATION_SUMMARY.md  UPDATE_BRIEF.md  USAGE.md  cleanup_for_oss.bat  commitlint.config.js  docker-compose.yml  execute_final_push.bat  execute_oss_release.bat  execute_tor_release.bat  execute_tor_release.py  (+7 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  security.yml
.qwen/: settings.json  settings.json.orig
agents/: __init__.py  diff_proxy_agent.py  embed_agent.py  ingest_agent.py  kg_expand_agent.py  manifold_agent.py  media_probe_agent.py  ner_agent.py  runner.py
agents/pipeline/: __init__.py  checkpointer.py  graph.py  state.py
docs/: ADMIN_CONSOLE_TEMPLATES.md  DATA_ENGINEERING_ASSESSMENT.md  KG_SCHEMA.md  LEGAL_COMPLIANCE_IMPLEMENTATION.md  LEGAL_COMPLIANCE_QUICK_REFERENCE.md  LEGAL_RISK_ASSESSMENT.md  LEGAL_RISK_EXECUTIVE_SUMMARY.md  PDR.md  admin_dashboard.html  admin_login.html  tor_dashboard.html
mcp_servers/: doc_search_server.py  kg_query_server.py  media_index_server.py  smithery.yaml
scripts/: audit_log_check.py  bootstrap.py  pii_scanner.py  verify_disclaimer.py  verify_headers.py
src/julia/: SPECTOR.jl
src/python/: admin_console.py  manage.py  spector.py  tor_manager.py  tornado_tor_integration.py
src/python/apps/documents/: models.py  serializers.py  urls.py  views.py
src/python/apps/entities/: models.py  urls.py
src/python/apps/privacy/: urls.py  views.py
src/python/pipeline/: __init__.py  checkpointer.py  graph.py  runner.py  state.py
src/python/spector_django/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/python/spector_django/apps/documents/: apps.py  models.py  serializers.py  urls.py  views.py
src/python/spector_django/apps/documents/migrations/: 0001_initial.py  __init__.py
src/python/spector_django/apps/entities/: apps.py  models.py  serializers.py  urls.py  views.py
src/python/spector_django/apps/entities/migrations/: 0001_initial.py
src/python/spector_django/apps/privacy/: apps.py  urls.py  views.py
tests/: conftest.py  test_checkpointer.py  test_diff_proxy.py  test_ingest.py  test_pipeline_graph.py  test_pipeline_state.py  test_privacy_erasure.py
tests/julia/: runtests.jl
tests/python/: conftest.py  test_embed_agent.py  test_ingest_agent.py  test_ner_agent.py  test_pipeline.py
