[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spector"
version = "1.0.0"
description = "Semantic Pipeline for Entity Correlation and Topological Organization Research"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SPECTOR Contributors", email = "contributors@example.com"}
]
keywords = [
    "knowledge-graph",
    "nlp",
    "document-analysis",
    "vector-database",
    "neo4j",
    "qdrant",
    "langgraph",
    "ai-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    # Core
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "tornado>=6.4.0",
    
    # Tor Integration
    "stem>=1.8.2",
    "PySocks>=1.7.1",
    
    # Document Processing
    "PyMuPDF>=1.23.0",
    "pdfminer.six>=20221105",
    "pdfplumber>=0.10.0",
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    
    # NLP / NER
    "spacy>=3.6.0",
    "gliner>=0.2.0",
    "sentence-transformers>=2.2.0",
    
    # Vector Operations
    "umap-learn>=0.5.4",
    "openTSNE>=1.0.0",
    "hdbscan>=0.8.33",
    "scikit-learn>=1.3.0",
    
    # CUDA / GPU (optional, installed based on system)
    # "cupy-cuda13x>=12.0.0",  # Install based on CUDA version
    # "cudf-cu13>=23.0.0",
    # "cuml-cu13>=23.0.0",
    # "cugraph-cu13>=23.0.0",
    
    # Vector Databases
    "qdrant-client>=1.6.0",
    "weaviate-client>=3.20.0",
    "chromadb>=0.4.0",
    "redis>=5.0.0",
    "langcache>=0.1.0",
    
    # Graph Databases
    "neo4j>=5.0.0",
    "lightrag>=0.1.0",
    
    # Document / Data Stores
    "duckdb>=0.9.0",
    "pymongo>=4.5.0",
    "tiledb>=0.18.0",
    
    # AI Orchestration
    "langgraph>=0.0.1",
    "langchain>=0.1.0",
    "langsmith>=0.0.1",
    
    # Web Framework
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
    "channels>=4.0.0",
    "tornado>=6.3.0",
    
    # HTTP / Network
    "aiohttp>=3.9.0",
    "torpy>=1.0.0",
    "requests>=2.31.0",
    
    # MCP / AI Integration
    "mcp>=0.1.0",
    "smithery>=0.1.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "python-json-logger>=2.0.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
]

[project.optional-dependencies]
cuda13x = [
    "cupy-cuda13x>=12.0.0",
    "cudf-cu13>=23.0.0",
    "cuml-cu13>=23.0.0",
    "cugraph-cu13>=23.0.0",
    "cugraph-gnn-cu13>=23.0.0",
]
cuda12x = [
    "cupy-cuda12x>=12.0.0",
    "cudf-cu12>=23.0.0",
    "cuml-cu12>=23.0.0",
    "cugraph-cu12>=23.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/SPECTOR/spector"
Documentation = "https://spector.readthedocs.io"
Repository = "https://github.com/SPECTOR/spector.git"
Issues = "https://github.com/SPECTOR/spector/issues"

[project.scripts]
spector = "spector.cli:main"

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yaml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D203", "D213"]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
